c2rust-transpile/tests/snapshots/snapshots__transpile-linux@wide_strings.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/wide_strings.linux.rs
input_file: c2rust-transpile/tests/snapshots/os-specific/wide_strings.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![feature(raw_ref_op)]
extern "C" {
    fn wcslen(__s: *const wchar_t) -> ::core::ffi::c_ulong;
}
pub type size_t = usize;
pub type wchar_t = ::libc::wchar_t;
#[no_mangle]
pub static mut static_array: [wchar_t; 2] =
    unsafe { ::core::mem::transmute::<[u8; 8], [wchar_t; 2]>(*b"x\0\0\0\0\0\0\0") };
#[no_mangle]
pub static mut static_array_longer: [wchar_t; 3] =
    unsafe { ::core::mem::transmute::<[u8; 12], [wchar_t; 3]>(*b"x\0\0\0\0\0\0\0\0\0\0\0") };
#[no_mangle]
pub static mut static_array_shorter: [wchar_t; 1] =
    unsafe { ::core::mem::transmute::<[u8; 4], [wchar_t; 1]>(*b"x\0\0\0") };
#[no_mangle]
pub unsafe extern "C" fn func() {
    let mut array: [wchar_t; 2] =
        ::core::mem::transmute::<[u8; 8], [wchar_t; 2]>(*b"x\0\0\0\0\0\0\0");
    let mut array_longer: [wchar_t; 3] =
        ::core::mem::transmute::<[u8; 12], [wchar_t; 3]>(*b"x\0\0\0\0\0\0\0\0\0\0\0");
    let mut array_shorter: [wchar_t; 1] =
        ::core::mem::transmute::<[u8; 4], [wchar_t; 1]>(*b"x\0\0\0");
    let mut len: size_t = wcslen(&raw mut array as *mut wchar_t) as size_t;
}
