c2rust-transpile/tests/snapshots/snapshots__transpile-macos@dummy.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
assertion_line: 69
expression: cat tests/snapshots/platform-specific/dummy.rs
input_file: c2rust-transpile/tests/snapshots/platform-specific/dummy.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]

