c2rust-transpile/tests/snapshots/snapshots__transpile-macos@typedefidx.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/typedefidx.macos.rs
input_file: c2rust-transpile/tests/snapshots/os-specific/typedefidx.c
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_imports,
    unused_mut
)]
pub type __darwin_size_t = usize;
pub type size_t = __darwin_size_t;
pub type uint64_t = u64;
#[no_mangle]
pub unsafe extern "C" fn index_typedef(mut arr: *mut uint64_t) {
    let mut foo3: size_t = *arr.offset(25 as ::core::ffi::c_int as isize) as size_t;
}
